--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ log = "0.4"
 tokio = "0.1"
 
 [dev-dependencies]
+env_logger = "0.6"
 structopt = "0.2"
 structopt-derive = "0.2"
-env_logger = "0.6"
+tokio-signal = "0.2"
