--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,13 @@ edition = "2018"
 bytes = "0.4"
 futures = "0.1"
 log = "0.4"
-tokio = "0.1"
+tokio-codec = "0.1"
+tokio-io = "0.1"
+tokio-timer = "0.2"
 
 [dev-dependencies]
 env_logger = "0.6"
 structopt = "0.2"
 structopt-derive = "0.2"
+tokio = "0.1"
 tokio-signal = "0.2"
