Create separate types for each packet.
- Each packet type now has its own Rust type. These types also impl the new
  `PacketMeta` trait.

- The `mqtt::proto::Packet::*` packet type constants are now the `PACKET_TYPE`
  associated const of the `PacketMeta` trait.

- `PacketCodec` now pre-calculates the expected size of the encoded packet
  and reserves that space up-front, instead of encoding the packet into
  a separate `BytesMut` and extending the destination with it.

  It does this by encoding the packet twice, once into a fake buffer that
  only counts the number of bytes written to it, and again with a real
  `bytes::BytesMut`. Inspecting the assembly reveals that the compiler is
  able to collapse the first stage to the optimal number of additions of
  constant `usize`s (and even to constants for the simple fixed-size packets).

- To be able to encode packets twice, the intermediate UTF8-string and
  remaining-length encoders are now just functions that take `&str` and `usize`
  respectively, instead of `tokio::Encoder` implementations.

- The `Debug` impl of CONNECT packets no longer shows the `password` field.

--- a/mqtt-fuzz/Cargo.toml
+++ b/mqtt-fuzz/Cargo.toml
@@ -15,3 +15,9 @@ tokio = "0.1"
 bytes = "0.4"
 mqtt = { path = ".." }
 tokio = "0.1"
+
+[profile.dev]
+codegen-units = 1 # Workaround for https://github.com/rust-fuzz/cargo-fuzz/issues/161
+
+[profile.release]
+codegen-units = 1 # Workaround for https://github.com/rust-fuzz/cargo-fuzz/issues/161
