--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,15 +6,11 @@ edition = "2018"
 
 [dependencies]
 bytes = "0.4"
-futures = "0.1"
 log = "0.4"
-tokio-codec = "0.1"
-tokio-io = "0.1"
-tokio-timer = "0.2"
+tokio-codec = "0.2.0-alpha.6"
 
 [dev-dependencies]
 env_logger = "0.6"
 structopt = "0.2"
 structopt-derive = "0.2"
-tokio = "0.1"
-tokio-signal = "0.2"
+tokio = "0.2.0-alpha.6"
