--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,12 +5,12 @@ authors = ["Arnav Singh <arsing@microsoft.com>"]
 edition = "2018"
 
 [dependencies]
-bytes = "0.4"
+bytes = "0.5"
 log = "0.4"
-tokio-codec = "0.2.0-alpha.6"
+tokio-util = { version = "0.2", features = ["codec"] }
 
 [dev-dependencies]
 env_logger = "0.6"
 structopt = "0.2"
 structopt-derive = "0.2"
-tokio = "0.2.0-alpha.6"
+tokio = { version = "0.2", features = ["full"] }
